Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/Work_Detail__c.object-meta.xml
<CustomObject>
    <label>Work Detail</label>
    <nameField>
        <displayFormat>WD{000000000}</displayFormat>
        <label>Work Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>