Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Marketing_Campaign_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>