Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Category_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Work__c</fullName>
    <label>Category of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Driving</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>