Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Catering_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Catering_Jobs__c</fullName>
    <label>Catering Jobs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barista</fullName>
            </value>
            <value>
                <fullName>Bar Staff</fullName>
            </value>
            <value>
                <fullName>Butler</fullName>
            </value>
            <value>
                <fullName>Care Worker</fullName>
            </value>
            <value>
                <fullName>Catering Assistant</fullName>
            </value>
            <value>
                <fullName>Catering Manager</fullName>
            </value>
            <value>
                <fullName>Chamber Person</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Chef de partie</fullName>
            </value>
            <value>
                <fullName>Chef Manager</fullName>
            </value>
            <value>
                <fullName>Commis Chef</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>Deli Bar</fullName>
            </value>
            <value>
                <fullName>Event Staff</fullName>
            </value>
            <value>
                <fullName>Food Services Assistant</fullName>
            </value>
            <value>
                <fullName>Front of House</fullName>
            </value>
            <value>
                <fullName>General Assistant</fullName>
            </value>
            <value>
                <fullName>Head Chef</fullName>
            </value>
            <value>
                <fullName>Hospitality Staff</fullName>
            </value>
            <value>
                <fullName>House Keeper</fullName>
            </value>
            <value>
                <fullName>Kitchen Assistant</fullName>
            </value>
            <value>
                <fullName>Kitchen Porter</fullName>
            </value>
            <value>
                <fullName>Laundry Person</fullName>
            </value>
            <value>
                <fullName>Silver Service</fullName>
            </value>
            <value>
                <fullName>Sous Chef</fullName>
            </value>
            <value>
                <fullName>Steward</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Waiting Staff</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Experience</fullName>
                <isActive>false</isActive>
                <label>No Experience</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>