Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Catering_Skills__c.field-meta.xml
<CustomField>
    <fullName>Catering_Skills__c</fullName>
    <label>Catering Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food &amp; Hygiene</fullName>
            </value>
            <value>
                <fullName>Food Safety</fullName>
            </value>
            <value>
                <fullName>Care Worker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>