Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Days_Available__c.field-meta.xml
<CustomField>
    <fullName>Days_Available__c</fullName>
    <label>Days Available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekdays</fullName>
            </value>
            <value>
                <fullName>Weekends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>