Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/DBS_Details__c.field-meta.xml
<CustomField>
    <fullName>DBS_Details__c</fullName>
    <label>DBS Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DBS_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DBS Enhanced: Adult Workforce</fullName>
            </value>
            <value>
                <fullName>DBS Enhanced: Child &amp; Adult Workforce</fullName>
            </value>
            <value>
                <fullName>DBS Enhanced: Child Workforce</fullName>
            </value>
            <value>
                <fullName>DBS Enhanced: Other Workforce</fullName>
            </value>
            <value>
                <fullName>DBS Standard: Adult Workforce</fullName>
            </value>
            <value>
                <fullName>DBS Standard: Child &amp; Adult Workforce</fullName>
            </value>
            <value>
                <fullName>DBS Standard: Child Workforce</fullName>
            </value>
            <value>
                <fullName>DBS Standard: Other Workforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>