Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/DBS_Type__c.field-meta.xml
<CustomField>
    <fullName>DBS_Type__c</fullName>
    <label>DBS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Enhanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>