Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Drink_Driving_or_Insurance_Convictions__c.field-meta.xml
<CustomField>
    <fullName>Drink_Driving_or_Insurance_Convictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drink Driving or Insurance Convictions</label>
    <type>Checkbox</type>
</CustomField>