Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Driven_commercially__c.field-meta.xml
<CustomField>
    <fullName>Driven_commercially__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driven Commercially?</label>
    <type>Checkbox</type>
</CustomField>