Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Driving_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Driving_Jobs__c</fullName>
    <label>Driving Jobs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chauffer</fullName>
            </value>
            <value>
                <fullName>Counterbalance FLT Driver</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Drivers Mate</fullName>
            </value>
            <value>
                <fullName>Fork Lift Driver</fullName>
            </value>
            <value>
                <fullName>LGV ADR Category C</fullName>
            </value>
            <value>
                <fullName>LGV ADR Category C+E</fullName>
            </value>
            <value>
                <fullName>LGV ADR Category C1</fullName>
            </value>
            <value>
                <fullName>LGV C+E Driver</fullName>
            </value>
            <value>
                <fullName>LGV C+E Driver (102 Restriction)</fullName>
            </value>
            <value>
                <fullName>LGV C1 Driver</fullName>
            </value>
            <value>
                <fullName>LGV C Driver</fullName>
            </value>
            <value>
                <fullName>LGV HIAB Category C</fullName>
            </value>
            <value>
                <fullName>LGV HIAB Category C+E</fullName>
            </value>
            <value>
                <fullName>PCV Driver (Bus/Coach)</fullName>
            </value>
            <value>
                <fullName>PCV Driver (Minibus)</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Telescopic Fork Lift Driver</fullName>
            </value>
            <value>
                <fullName>Van Driver</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>