Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Expected_Salary_Range_Per_Annum__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salary_Range_Per_Annum__c</fullName>
    <label>Expected Salary Range (Per Annum)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>