Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Facilities_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Jobs__c</fullName>
    <label>Facilities Jobs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caretaker</fullName>
            </value>
            <value>
                <fullName>Care Worker</fullName>
            </value>
            <value>
                <fullName>Car Park Attendant</fullName>
            </value>
            <value>
                <fullName>Cleaner</fullName>
            </value>
            <value>
                <fullName>Gardener</fullName>
            </value>
            <value>
                <fullName>Grounds Maintenance</fullName>
            </value>
            <value>
                <fullName>Handy Person</fullName>
            </value>
            <value>
                <fullName>Hospital Porter</fullName>
            </value>
            <value>
                <fullName>Internal - Cleaning</fullName>
            </value>
            <value>
                <fullName>Janitor</fullName>
            </value>
            <value>
                <fullName>Litter Picker</fullName>
            </value>
            <value>
                <fullName>Platform Staff</fullName>
            </value>
            <value>
                <fullName>Porter</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Hygiene operative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>