Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/How_comprehensive_is_your_UK_geography__c.field-meta.xml
<CustomField>
    <fullName>How_comprehensive_is_your_UK_geography__c</fullName>
    <label>Road Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>County Specific</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
                <label>City Specific</label>
            </value>
            <value>
                <fullName>SatNav Dependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>