Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Manufacturing_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Jobs__c</fullName>
    <label>Manufacturing Jobs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assembler</fullName>
            </value>
            <value>
                <fullName>Food Packing</fullName>
            </value>
            <value>
                <fullName>Line Supervisor</fullName>
            </value>
            <value>
                <fullName>MIG Welder</fullName>
            </value>
            <value>
                <fullName>Production Operative</fullName>
            </value>
            <value>
                <fullName>Site Duty Manager</fullName>
            </value>
            <value>
                <fullName>TIG Welder</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sewing machinist</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Fitter</fullName>
            </value>
            <value>
                <fullName>Mechanical fitter</fullName>
            </value>
            <value>
                <fullName>Quality Checkers</fullName>
            </value>
            <value>
                <fullName>Cleanroom Operative</fullName>
            </value>
            <value>
                <fullName>Chemical Operative</fullName>
            </value>
            <value>
                <fullName>Machine Operator</fullName>
            </value>
            <value>
                <fullName>Solderer</fullName>
            </value>
            <value>
                <fullName>Carpenter</fullName>
            </value>
            <value>
                <fullName>Shovel Driver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>