Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <label>Notice Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>