Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Office_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Office_Jobs__c</fullName>
    <label>Office Jobs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Assistant Accountant</fullName>
            </value>
            <value>
                <fullName>Audio Secretary</fullName>
            </value>
            <value>
                <fullName>Call Centre</fullName>
            </value>
            <value>
                <fullName>Consultant Support</fullName>
            </value>
            <value>
                <fullName>Credit Control</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Data Engineering</fullName>
            </value>
            <value>
                <fullName>Data Entry</fullName>
            </value>
            <value>
                <fullName>DTP/Graphic Operator</fullName>
            </value>
            <value>
                <fullName>Filing Clerk</fullName>
            </value>
            <value>
                <fullName>Health &amp; Safety</fullName>
            </value>
            <value>
                <fullName>HR Admin</fullName>
            </value>
            <value>
                <fullName>HR Advisor</fullName>
            </value>
            <value>
                <fullName>IT Administrator</fullName>
            </value>
            <value>
                <fullName>IT Helpdesk</fullName>
            </value>
            <value>
                <fullName>IT Support</fullName>
            </value>
            <value>
                <fullName>Legal Secretary</fullName>
            </value>
            <value>
                <fullName>Marketing Assistant</fullName>
            </value>
            <value>
                <fullName>Medical Secretary</fullName>
            </value>
            <value>
                <fullName>Personal Assistant</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Accounts Payable Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>