Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Other_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Other_Jobs__c</fullName>
    <label>Other Jobs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Carpenter/Joiner</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>Labourer</fullName>
            </value>
            <value>
                <fullName>Polisher</fullName>
            </value>
            <value>
                <fullName>Refuse Collector</fullName>
            </value>
            <value>
                <fullName>Road Worker</fullName>
            </value>
            <value>
                <fullName>Technical Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>