Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Other_work__c.field-meta.xml
<CustomField>
    <fullName>Other_work__c</fullName>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>