Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Part_Full_Time__c.field-meta.xml
<CustomField>
    <fullName>Part_Full_Time__c</fullName>
    <label>Part/Full Time</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part-Time</fullName>
            </value>
            <value>
                <fullName>Full-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>