Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Points_on_Licence__c.field-meta.xml
<CustomField>
    <fullName>Points_on_Licence__c</fullName>
    <label>Points on Licence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>