Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Refrigerated_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Refrigerated_Vehicles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refrigerated Vehicles</label>
    <type>Checkbox</type>
</CustomField>