Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Retail_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Retail_Jobs__c</fullName>
    <label>Retail Jobs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care Worker</fullName>
            </value>
            <value>
                <fullName>Cashier</fullName>
            </value>
            <value>
                <fullName>Merchandiser</fullName>
            </value>
            <value>
                <fullName>Retail Staff</fullName>
            </value>
            <value>
                <fullName>Shelf Replenishment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>