Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Salary_per_Annum__c.field-meta.xml
<CustomField>
    <fullName>Salary_per_Annum__c</fullName>
    <label>Salary per Annum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>