Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Salary_per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Salary_per_Hour__c</fullName>
    <label>Salary per Hour</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>