Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Driving</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>