Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <label>Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>