Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Temp_Perm_Work__c.field-meta.xml
<CustomField>
    <fullName>Temp_Perm_Work__c</fullName>
    <label>Temp/Perm Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temp</fullName>
                <label>Temporary</label>
            </value>
            <value>
                <fullName>Perm</fullName>
                <label>Permanent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>