Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Time_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Day__c</fullName>
    <label>Time of Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Earlies</fullName>
                <label>Early Hours</label>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Nights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>