Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Type_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Work__c</fullName>
    <label>Type of Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Assembler</fullName>
            </value>
            <value>
                <fullName>Assistant Accountant</fullName>
            </value>
            <value>
                <fullName>Audio Secretary</fullName>
            </value>
            <value>
                <fullName>Barista</fullName>
            </value>
            <value>
                <fullName>Bar Staff</fullName>
            </value>
            <value>
                <fullName>Butler</fullName>
            </value>
            <value>
                <fullName>Call Centre</fullName>
            </value>
            <value>
                <fullName>Caretaker</fullName>
            </value>
            <value>
                <fullName>Car Park Attendant</fullName>
            </value>
            <value>
                <fullName>Carpenter/Joiner</fullName>
            </value>
            <value>
                <fullName>Cashier</fullName>
            </value>
            <value>
                <fullName>Catering Assistant</fullName>
            </value>
            <value>
                <fullName>Catering Manager</fullName>
            </value>
            <value>
                <fullName>Chamber Person</fullName>
            </value>
            <value>
                <fullName>Chauffer</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Chef de partie</fullName>
            </value>
            <value>
                <fullName>Chef Manager</fullName>
            </value>
            <value>
                <fullName>Cleaner</fullName>
            </value>
            <value>
                <fullName>Commis Chef</fullName>
            </value>
            <value>
                <fullName>Consultant Support</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>Counterbalance FLT Driver</fullName>
            </value>
            <value>
                <fullName>Credit Control</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Data Engineering</fullName>
            </value>
            <value>
                <fullName>Data Entry</fullName>
            </value>
            <value>
                <fullName>Deli Bar</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>