Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Warehouse_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Jobs__c</fullName>
    <label>Warehouse Jobs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care Worker</fullName>
            </value>
            <value>
                <fullName>Fork Lift Driver</fullName>
            </value>
            <value>
                <fullName>Goods In</fullName>
            </value>
            <value>
                <fullName>Goods Out</fullName>
            </value>
            <value>
                <fullName>Loader/Unloader</fullName>
            </value>
            <value>
                <fullName>Mail Room</fullName>
            </value>
            <value>
                <fullName>Narrow Aisle Fork Lift Driver</fullName>
            </value>
            <value>
                <fullName>Picker/Packer</fullName>
            </value>
            <value>
                <fullName>Postal Worker</fullName>
            </value>
            <value>
                <fullName>Reach FLT Driver</fullName>
            </value>
            <value>
                <fullName>Shunter</fullName>
            </value>
            <value>
                <fullName>Site Manager</fullName>
            </value>
            <value>
                <fullName>Sorter</fullName>
            </value>
            <value>
                <fullName>Stores Person</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Warehouse Operative</fullName>
            </value>
            <value>
                <fullName>Yards Person</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Banksman</fullName>
            </value>
            <value>
                <fullName>Manufacturing Operative</fullName>
            </value>
            <value>
                <fullName>Recycling Operative</fullName>
            </value>
            <value>
                <fullName>360 Excavator Operator</fullName>
            </value>
            <value>
                <fullName>Power Tool Operative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>