Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/fields/Years_Licence_Held__c.field-meta.xml
<CustomField>
    <fullName>Years_Licence_Held__c</fullName>
    <label>Years Licence Held</label>
    <length>255</length>
    <type>Text</type>
</CustomField>