Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/recordTypes/Catering_Details.recordType-meta.xml
<RecordType>
    <fullName>Catering_Details</fullName>
    <active>true</active>
    <label>Catering Details</label>
</RecordType>