Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/recordTypes/Driving_Details.recordType-meta.xml
<RecordType>
    <fullName>Driving_Details</fullName>
    <active>true</active>
    <label>Driving Details</label>
</RecordType>