Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/recordTypes/Facilities_Work_Details.recordType-meta.xml
<RecordType>
    <fullName>Facilities_Work_Details</fullName>
    <active>true</active>
    <label>Facilities Work Details</label>
</RecordType>