Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/recordTypes/Generic_Work_Details.recordType-meta.xml
<RecordType>
    <fullName>Generic_Work_Details</fullName>
    <active>true</active>
    <label>Generic Work Details</label>
</RecordType>