Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/recordTypes/Manufacturing_Work_Details.recordType-meta.xml
<RecordType>
    <fullName>Manufacturing_Work_Details</fullName>
    <active>true</active>
    <label>Manufacturing Work Details</label>
</RecordType>