Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/recordTypes/Office_Details.recordType-meta.xml
<RecordType>
    <fullName>Office_Details</fullName>
    <active>true</active>
    <label>Office Details</label>
</RecordType>