Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/recordTypes/Retail_Work_Details.recordType-meta.xml
<RecordType>
    <fullName>Retail_Work_Details</fullName>
    <active>true</active>
    <label>Retail Work Details</label>
</RecordType>