Frankbelford/uatv1ba/force-app/main/default/objects/Work_Detail__c/recordTypes/Warehouse_Details.recordType-meta.xml
<RecordType>
    <fullName>Warehouse_Details</fullName>
    <active>true</active>
    <label>Warehouse Details</label>
</RecordType>